fix whitespace under navbar

--- a/app/assets/stylesheets/_about.css.sass
+++ b/app/assets/stylesheets/_about.css.sass
@@ -3,6 +3,7 @@
 .img-container
   position: relative
   vertical-align: middle
+  margin-top: -1%
 
 #cover-photo
   border-bottom: solid $dark-blue
