--- a/app/assets/stylesheets/_navbar.css.sass
+++ b/app/assets/stylesheets/_navbar.css.sass
@@ -5,6 +5,7 @@
   border-bottom: solid $cyan
   font-size: $small-text
   background-color: white
+  margin-bottom: 0px
 
 .active #link
   color: $cyan
